debugginf fucking android builds